Jun. Часть 005. Эксперименты с различными GC